tests/rgs/valid/always_conditional.rgs
ACTION run.
EVENT  spotted ENVIRONMENT.
CONDITION is_tired MYSELF.

DURING ALWAYS:
    WHEN spotted ENVIRONMENT IF NOT is_tired MYSELF:
        DO run.
