tests/rgs/syntax_errors/when_if_no_condition.rgs
ACTION run.
EVENT spotted ENVIRONMENT.
DURING ALWAYS:
    WHEN spotted ENVIRONMENT IF:
        DO run.
